chore(01-02): verify database connection and add test record
- Added dotenv to load .env.local in drizzle.config.ts
- Created scripts/test-db.ts for database verification
- Pushed schema to Neon (training_jobs table created)
- Inserted test record successfully
- Verified /api/health endpoint returns healthy status with trainingJobCount: 1

--- a/package.json
+++ b/package.json
@@ -41,12 +41,14 @@
     "@types/react": "^19.2.14",
     "@types/react-dom": "^19.2.3",
     "autoprefixer": "^10.4.24",
+    "dotenv": "^17.3.1",
     "drizzle-kit": "^0.31.9",
     "eslint": "^10.0.0",
     "eslint-config-next": "^16.1.6",
     "postcss": "^8.5.6",
     "shadcn": "^3.8.4",
     "tailwindcss": "^4.1.18",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
 }
