feat(03-03): add AI recommender Server Action with LLM and rule-based fallback
- Add recommendModel Server Action to existing actions.ts
- Primary path: HuggingFace Inference API with Llama-3.1-8B-Instruct
- LLM receives full Liquid LFM catalog as context
- Fallback path: keyword matching on modality (vision/audio/nano/text)
- Install @huggingface/inference dependency
- Graceful degradation: works with or without HUGGINGFACE_TOKEN

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "packageManager": "pnpm@10.28.2",
   "dependencies": {
     "@huggingface/hub": "^2.9.0",
+    "@huggingface/inference": "^4.13.12",
     "@neondatabase/serverless": "^1.0.2",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-separator": "^1.1.8",
