--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
   "license": "ISC",
   "packageManager": "pnpm@10.28.2",
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@huggingface/hub": "^2.9.0",
     "@huggingface/inference": "^4.13.12",
     "@neondatabase/serverless": "^1.0.2",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.2.8",
@@ -34,6 +37,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
+    "react-hook-form": "^7.71.1",
     "tailwind-merge": "^3.4.1",
     "tw-animate-css": "^1.4.0",
     "use-debounce": "^10.1.0",
