--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "drizzle-orm": "^0.45.1",
     "geist": "^1.7.0",
     "lucide-react": "^0.564.0",
+    "motion": "^12.34.0",
     "next": "^16.1.6",
     "next-themes": "^0.4.6",
     "react": "^19.2.4",
